--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="app.js" defer></script>
 </head>
 <body>
-    <h1>Login</h1>
+    <h1>LOGIN</h1>
     <form id="login-form">
         <input type="email" id="email" placeholder="Email" required>
         <input type="password" id="password" placeholder="Senha" required>
